# ori

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFESTO.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  philosophy.md  principles.md  repository-intelligence.md  roadmap.md  vision.md
example/: collect_repository.py
specs/: evidence-model.md  intelligence-engine.md  knowledge-model.md  observation-model.md
src/collector/: __init__.py  auth.py  documentation.py  github.py  types.py
src/intelligence/: analyzer.py  constants.py  contributor.py  developer.py  developer_fit.py  documentation.py  evaluation.py  governance.py  health.py  models.py  recommendations.py  risk.py  roadmap.py  skills.py  summarizer.py
src/ori/: __init__.py  cli.py  reporter.py
src/ori/commands/: analyze.py  health.py
tests/: test_developer_fit.py  test_documentation.py  test_evaluation.py  test_health.py  test_risk.py  test_roadmap.py  test_skills.py
