[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ori"
version = "1.0.0"
description = "Repository Intelligence for understanding software repositories."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Cynthia Palmata Oke" }
]

keywords = [
    "repository-intelligence",
    "software-engineering",
    "knowledge-management",
    "open-source",
    "documentation",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
]

dependencies = [
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/Oryke/ori"
Repository = "https://github.com/Oryke/ori"
Issues = "https://github.com/Oryke/ori/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"