[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ori"
version = "1.1.0"

description = "ORION (Open Repository Intelligence & Onboarding Navigator) — Repository intelligence for understanding and evaluating open-source software repositories."

readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Cynthia Palmata Oke" }
]

keywords = [
    "orion",
    "ori",
    "repository-intelligence",
    "repository-analysis",
    "github",
    "github-api",
    "open-source",
    "developer-tools",
    "contributor-onboarding",
    "software-engineering",
    "cli",
    "python",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

dependencies = [
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/Oryke/ori"
Repository = "https://github.com/Oryke/ori"
Issues = "https://github.com/Oryke/ori/issues"

[project.scripts]
ori = "ori.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"